[workspace]
resolver = "2"
members = [
  "env_id",
]

[package]
name = "build_assert"
version = "0.0.1"
edition = "2021"

[package.metadata.docs.rs]
cargo-args = ["--release"]

[features]
# Do not use inline assemblies to raise build-time errors.
no_asm = []

[dependencies]
env_id = { path = "./env_id", version = "0.0.1" }
