[workspace]
resolver = "2"
members = [
  "env_id",
]

[package]
name = "build_assert"
version = "0.0.1"
authors = ["MaxXing <x@MaxXSoft.net>"]
edition = "2021"
description = "Asserts const generic expressions at build-time."
repository = "https://github.com/MaxXSoft/build_assert"
documentation = "https://docs.rs/build_assert"
categories = ["no-std", "rust-patterns", "development-tools::testing"]
keywords = ["assert", "build", "static", "testing"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
rustdoc-args = ["-C", "opt-level=3"]
cargo-args = ["--release"]

[features]
# Do not use inline assemblies to raise build-time errors.
no_asm = []

[dependencies]
env_id = { path = "./env_id", version = "0.0.1" }
